# django-app-k8s-deployment

./: .env.docker  .gitattributes  .gitignore  .gitlab-ci-app.yml  .gitlab-ci-infra.yml  .gitlab-ci-locust.yml  .gitlab-ci-monitoring.yml  .gitlab-ci.yml  Dockerfile  NextSteps.md  README.md  application-pipeline.yml  ci_templates.yml  db.sqlite3  infrastructure-pipeline.yml  manage.py  package-lock.json  pyproject.toml
ArticleApp/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
DjangoArticleApp/: asgi.py  settings.py  urls.py  wsgi.py
articleApp/: views.py
djangoarticleapp/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py
djangoarticleapp/articleApp/: forms.py  models.py  views.py
djangoarticleapp/articleApp/migrations/: 0001_initial.py
djangoarticleapp/djangoarticleapp/: README.md  asgi.py  settings.py  urls.py  wsgi.py
djangoarticleapp/templates/articleApp/: article_delete.html  base.html  home.html
djangocourse/: settings.py  urls.py
k8s-manifests/: django-deployment.yaml  kubernetes_deployment.md  postgres-deployment.yaml
locust/: locustfile.py
provision/: DevOpsApp.code-workspace  alb_listener_tg.md  ansible.cfg  automated_kubeadm_init.yml  aws_ec2.yml  deploy_app.yml  gitlab_provisioning_k8s_cluster.yml  inventory.ini  main.tf  playbook.yml  provision.py  provision_kubernetes_cluster.yml  public-key.pub  terraform.tfstate  terraform.tfstate.backup
scripts/: ansible_helm_and_kube_dependencies.sh  default_ansible.sh  default_helm.sh  default_terraform.sh
static/: output.css
(+192 files in other folders)
