[tool.poetry]
name = "djangoarticleapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.0.1"
django-allauth = {extras = ["socialaccount"], version = "^65.3.1"}
psycopg = "^3.2.4"
dj-database-url = "^2.3.0"
boto3 = "^1.37.7"
botocore = "^1.37.7"
prometheus-client = "^0.22.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
